--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 	<artifactId>CursoAppium</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>io.appium</groupId>
